changed forecast to display 5 days instead of 7

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
-.purple{color:purple}
-.red{color:red}
-.orange{color:orange}
-.yellow{color:yellow}
-.green{color:green}
+.purple{background-color:purple}
+.red{background-color:red}
+.orange{background-color:orange}
+.yellow{background-color:yellow}
+.green{background-color:green}
